Adapt place holders in apache2 configuration file.

--- a/etc/apache2/vhost.d/cephalix_include.conf
+++ b/etc/apache2/vhost.d/cephalix_include.conf
@@ -1,9 +1,8 @@
-<virtualhost REPLACE-VPN_IP:80>
-        ServerAdmin     admin@cephalix.server
-        DocumentRoot    /srv/www/oss
-        ServerName      REPLACE-VPN_IP
+<virtualhost connectip:80>
+        DocumentRoot    /srv/www/admin
+        ServerName      connectip
         <location /api>
-          Require ip REPLACE-zadmin
+          Require ip zadminip
         </location>
         ErrorLog        /var/log/apache2/cephalix-error_log
         TransferLog     /var/log/apache2/cephalix-access_log
