Use hostname zadmin instead of the ip. This makes the configuration more configurable.

--- a/etc/apache2/vhosts.d/cephalix_include.conf
+++ b/etc/apache2/vhosts.d/cephalix_include.conf
@@ -2,7 +2,7 @@
         DocumentRoot    /srv/www/admin
         ServerName      connectip
         <location /api>
-          Require ip zadminip
+          Require host zadmin
         </location>
         ErrorLog        /var/log/apache2/cephalix-error_log
         TransferLog     /var/log/apache2/cephalix-access_log
